@@ -11,6 +11,7 @@ Merged from 2.2:
  * Unresolved hostname leads to replace being ignored (CASSANDRA-11210)
  * Only log yaml config once, at startup (CASSANDRA-11217)
  * Reference leak with parallel repairs on the same table (CASSANDRA-11215)
+ * Add --hex-format option to nodetool getsstables (CASSANDRA-11337)
 Merged from 2.1:
  * InvalidateKeys should have a weak ref to key cache (CASSANDRA-11176)
  * COPY FROM on large datasets: fix progress report and debug performance (CASSANDRA-11053)
